--- a/myApp/scss/ionic.app.scss
+++ b/myApp/scss/ionic.app.scss
@@ -14,7 +14,7 @@ $assertive:                       #ef473a !default;
 $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
-$dark:                        #00344C !default;
+$dark:                        #1F1F1F !default;
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
