--- a/myApp/www/templates/menu.html
+++ b/myApp/www/templates/menu.html
@@ -29,6 +29,9 @@
         <ion-item menu-close href="#/app/team">
           Teams
         </ion-item>
+         <ion-item menu-close href="#/app/playlists">
+          competetiei
+        </ion-item>
         <ion-item menu-close href="#/app/faq">
           FAQ
         </ion-item>
