--- a/myApp/www/templates/menu.html
+++ b/myApp/www/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable bar-dark">
+    <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
       </ion-nav-back-button>
 
@@ -14,29 +14,21 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Menu</h1>
+      <h1 class="title">Left</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
-<!--
         <ion-item menu-close ng-click="login()">
           Login
         </ion-item>
--->
-        <ion-item menu-close href="#/app/home">
-          Home
+        <ion-item menu-close href="#/app/search">
+          Search
         </ion-item>
-        <ion-item menu-close href="#/app/team">
-          Teams
+        <ion-item menu-close href="#/app/browse">
+          Browse
         </ion-item>
-         <ion-item menu-close href="#/app/playlists">
-          competetiei
-        </ion-item>
-        <ion-item menu-close href="#/app/faq">
-          FAQ
-        </ion-item>
-        <ion-item menu-close href="#/app/contact">
-          Contact
+        <ion-item menu-close href="#/app/playlists">
+          Playlists
         </ion-item>
       </ion-list>
     </ion-content>
