--- a/myApp/www/templates/menu.html
+++ b/myApp/www/templates/menu.html
@@ -18,17 +18,15 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close ng-click="login()">
-          Login
+        
+        <ion-item menu-close href="#/app/home">
+          Home
         </ion-item>
-        <ion-item menu-close href="#/app/search">
-          Search
+        <ion-item menu-close href="#/app/competities">
+          Competities
         </ion-item>
-        <ion-item menu-close href="#/app/browse">
-          Browse
-        </ion-item>
-        <ion-item menu-close href="#/app/playlists">
-          Playlists
+        <ion-item menu-close href="#/app/contact">
+          Contact
         </ion-item>
       </ion-list>
     </ion-content>
