--- a/myApp/www/templates/search.html
+++ b/myApp/www/templates/search.html
@@ -2,6 +2,7 @@
   <ion-content ng-controller="MainCtrl">
     <ul>
       <li ng-repeat="t in teams.standing">{{t.teamName}}</li>
+      <li ng-repeat="t in teams.standing">{{t.points}}</li>
     </ul>
   </ion-content>
 </ion-view>
