--- a/myApp/www/lib/ionic/css/ionic.css
+++ b/myApp/www/lib/ionic/css/ionic.css
@@ -3782,6 +3782,7 @@ a.subdued {
   position: absolute;
   left: 16px; }
 
+
 .action-sheet-title {
   padding: 16px;
   color: #8f8f8f;
@@ -3930,7 +3931,7 @@ a.subdued {
     background-image: linear-gradient(0deg, #b2b2b2, #b2b2b2 50%, transparent 50%);
     color: #444; }
     .bar.bar-stable .title {
-      color: #444; }
+      color: white; }
     .bar.bar-stable.bar-footer {
       background-image: linear-gradient(180deg, #b2b2b2, #b2b2b2 50%, transparent 50%); }
   .bar.bar-positive {
@@ -4127,7 +4128,7 @@ a.subdued {
     border-color: transparent;
     background: none;
     box-shadow: none;
-    color: #444;
+    color: white;
     font-size: 17px; }
   .bar-stable .button.button-icon {
     border-color: transparent;
