--- a/myApp/www/templates/contact.html
+++ b/myApp/www/templates/contact.html
@@ -1,4 +1,7 @@
-<ion-view view-title="Contact">
+<ion-view>
+  <ion-nav-title>
+      <img src="/img/logosensatie.png">
+    </ion-nav-title>
   <ion-content>
     <h4>Sensatie Reizen – Voetbalsensatie<br>
 Telefoon: +316 53 69 51 83<br>
