--- a/myApp/www/templates/search.html
+++ b/myApp/www/templates/search.html
@@ -1,4 +1,7 @@
-<ion-view view-title="Search">
+<ion-view>
+  <ion-nav-title>
+      <img src="/img/logosensatie.png">
+    </ion-nav-title>
   <ion-content ng-controller="MainCtrl">
     <ul>
       <li ng-repeat="t in teams.standing">{{t.teamName}}</li>
