--- a/myApp/www/templates/competities.html
+++ b/myApp/www/templates/competities.html
@@ -2,33 +2,25 @@
   <ion-content>
 <div class="list">
 
-  <a class="item item-icon-left" href="#/app/home">
-    <i class="icon ion-email"></i>
-    Check mail
+  <a class="item item-icon-left" href="#/app/england">
+    <i class="icon ion-ios-football"></i>
+    Premier League
   </a>
 
-  <a class="item item-icon-left item-icon-right" href="#/app/engeland">
-    <i class="icon ion-chatbubble-working"></i>
-    Call Ma
-    <i class="icon ion-ios-telephone-outline"></i>
-  </a>
-
-  <a class="item item-icon-left" href="#/app/engeland">
-    <i class="icon ion-mic-a"></i>
-    Record album
-    <span class="item-note">
-      Grammy
-    </span>
+  <a class="item item-icon-left item-icon-left" href="#/app/spain">
+    <i class="icon ion-ios-football"></i>
+    Primera División
   </a>
 
   <a class="item item-icon-left" href="#/app/engeland">
-    <i class="icon ion-person-stalker"></i>
-    Friends
-    <span class="badge badge-assertive">0</span>
+    <i class="icon ion-ios-football"></i>
+    Serie A
   </a>
 
+  <a class="item item-icon-left" href="#/app/engeland">
+    <i class="icon ion-ios-football"></i>
+    Lique
+  </a>
 </div>
-
-
   </ion-content>
 </ion-view>
