--- a/myApp/www/templates/england.html
+++ b/myApp/www/templates/england.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Premiere League">
+<ion-view view-title="premiere-league">
   <ion-content ng-controller="MainCtrl">
     <ul>
       <li ng-repeat="t in teams.standing">{{t.teamName}}</li>
