--- a/myApp/www/templates/contact.html
+++ b/myApp/www/templates/contact.html
@@ -1,6 +1,7 @@
 <ion-view>
-  <ion-nav-title>
+  <ion-nav-title> <div class="item item-avatar"> 
       <img src="/img/logosensatie.png">
+      </div>
     </ion-nav-title>
   <ion-content>
     <h4>Sensatie Reizen – Voetbalsensatie<br>
