--- a/myApp/www/templates/contact.html
+++ b/myApp/www/templates/contact.html
@@ -1,7 +1,7 @@
 <ion-view>
-  <ion-nav-title> <div class="item item-avatar"> 
-      <img src="/img/logosensatie.png">
-      </div>
+  <ion-nav-title> 
+      <img src="/img/logosensatie.jpg">
+      
     </ion-nav-title>
   <ion-content>
     <h4>Sensatie Reizen – Voetbalsensatie<br>
