--- a/myApp/www/templates/contact.html
+++ b/myApp/www/templates/contact.html
@@ -1,6 +1,6 @@
 <ion-view>
   <ion-nav-title> 
-      <img ng-src="/img/logosensatie.jpg">
+      <img ng-src="img/logosensatie.jpg">
       
     </ion-nav-title>
   <ion-content>
