--- a/myApp/www/templates/competities.html
+++ b/myApp/www/templates/competities.html
@@ -1,25 +1,33 @@
 <ion-view view-title="Competities">
   <ion-content>
-<div class="list">
+    <div class="list">
 
-  <a class="item item-icon-left" href="#/app/england">
-    <i class="icon ion-ios-football"></i>
+<a class="item item-icon-left" href="#/app/england">
+    <i class="icon"><img class="icon-competition" ng-src="img/United-Kingdom.png"></i>
     Premier League
   </a>
 
   <a class="item item-icon-left item-icon-left" href="#/app/spain">
-    <i class="icon ion-ios-football"></i>
+    <i class="icon"><img class="icon-competition" ng-src="img/Spain.png"></i>
     Primera División
   </a>
 
   <a class="item item-icon-left" href="#/app/engeland">
-    <i class="icon ion-ios-football"></i>
+    <i class="icon"><img class="icon-competition" ng-src="img/Italy.png"></i>
     Serie A
   </a>
 
   <a class="item item-icon-left" href="#/app/engeland">
-    <i class="icon ion-ios-football"></i>
-    Lique
+    <i class="icon"><img class="icon-competition" ng-src="img/Germany.png"></i>
+    Bundesliga
+  </a>
+    <a class="item item-icon-left" href="#/app/engeland">
+    <i class="icon"><img class="icon-competition" ng-src="img/Netherland.png"></i>
+    Eredivisie
+  </a>
+    <a class="item item-icon-left" href="#/app/engeland">
+    <i class="icon"><img class="icon-competition" ng-src="img/France-icon.png"></i>
+    Lique 1
   </a>
 </div>
   </ion-content>
