--- a/myApp/www/css/style.css
+++ b/myApp/www/css/style.css
@@ -1,3 +1,7 @@
 /* Empty. Add your own CSS if you like */
 ion-header-bar.bar-stable.bar.bar-header {
 background-color: #003352;}
+
+.icon-competition{
+	width:30px;
+}
