--- a/myApp/www/css/style.css
+++ b/myApp/www/css/style.css
@@ -5,3 +5,12 @@ background-color: #003352;}
 .icon-competition{
 	width:30px;
 }
+
+
+ion-item:nth-child(even) {background: #EAEAEA;}
+
+.logoclub {    height: 24px;
+    margin-right: 16px; width: 23px; display:inline-block; float:left;}
+
+.points {display:inline-block; float: right; margin-right: 40px; margin-top:3px;}
+.teamname {display:inline-block; margin-top:3px; }
