--- a/myApp/www/lib/ionic/css/ionic.css
+++ b/myApp/www/lib/ionic/css/ionic.css
@@ -5645,7 +5645,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
  * --------------------------------------------------
  */
 .item {
-  border-color: #ddd;
+  border-color: #FF9D00;
   background-color: #fff;
   color: #444;
   position: relative;
