--- a/myApp/www/templates/england.html
+++ b/myApp/www/templates/england.html
@@ -1,9 +1,9 @@
 <ion-view view-title="Premiere League">
   <ion-content ng-controller="MainCtrl">
-    <ul>
-      <li ng-repeat="t in teams.standing"><img ng-src="{{t.crestURI}}"></li>
-      <li ng-repeat="t in teams.standing">{{t.teamName}}</li>
-      <li ng-repeat="t in teams.standing">{{t.points}}</li>
-    </ul>
+    <ion-list>
+           
+      <ion-item ng-repeat="t in teams.standing"><img class="logoclub" ng-src="{{t.crestURI}}"> <div class="teamname"> {{t.teamName}}  </div>  <div class="points"> {{t.points}} </div></ion-item>
+      
+   </ion-list>
   </ion-content>
 </ion-view>
