--- a/myApp/www/templates/competities.html
+++ b/myApp/www/templates/competities.html
@@ -12,20 +12,20 @@
     Primera División
   </a>
 
-  <a class="item item-icon-left" href="#/app/engeland">
+  <a class="item item-icon-left" href="#/app/italy">
     <i class="icon"><img class="icon-competition" ng-src="img/Italy.png"></i>
     Serie A
   </a>
 
-  <a class="item item-icon-left" href="#/app/engeland">
+  <a class="item item-icon-left" href="#/app/germany">
     <i class="icon"><img class="icon-competition" ng-src="img/Germany.png"></i>
     Bundesliga
   </a>
-    <a class="item item-icon-left" href="#/app/engeland">
+    <a class="item item-icon-left" href="#/app/dutch">
     <i class="icon"><img class="icon-competition" ng-src="img/Netherland.png"></i>
     Eredivisie
   </a>
-    <a class="item item-icon-left" href="#/app/engeland">
+    <a class="item item-icon-left" href="#/app/france">
     <i class="icon"><img class="icon-competition" ng-src="img/France-icon.png"></i>
     Lique 1
   </a>
