--- a/myApp/www/templates/france.html
+++ b/myApp/www/templates/france.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Primera Division">
-  <ion-content ng-controller="SpainCtrl">
+  <ion-content ng-controller="FranceCtrl">
     <ul>
       <li ng-repeat="t in teams.standing">{{t.teamName}}</li>
       <li ng-repeat="t in teams.standing">{{t.points}}</li>
