--- a/myApp/www/templates/england.html
+++ b/myApp/www/templates/england.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Premiere League">
-  <ion-content ng-controller="MainCtrl">
+  <ion-content ng-controller="EnglandCtrl">
     <ion-list>
            
       <ion-item ng-repeat="t in teams.standing"><img class="logoclub" ng-src="{{t.crestURI}}"> <div class="teamname"> {{t.teamName}}  </div>  <div class="points"> {{t.points}} </div></ion-item>
