--- a/myApp/www/templates/competities.html
+++ b/myApp/www/templates/competities.html
@@ -3,30 +3,30 @@
     <div class="list">
 
 <a class="item item-icon-left" href="#/app/england">
-    <i class="icon"><img class="icon-competition" ng-src="img/United-Kingdom.png"></i>
+    <i class="icon"><img class="icon-competition" ng-src="img/premierleague.png"></i>
     Premier League
   </a>
 
   <a class="item item-icon-left item-icon-left" href="#/app/spain">
-    <i class="icon"><img class="icon-competition" ng-src="img/Spain.png"></i>
+    <i class="icon"><img class="icon-competition" ng-src="img/ligabvva.png"></i>
     Primera División
   </a>
 
   <a class="item item-icon-left" href="#/app/italy">
-    <i class="icon"><img class="icon-competition" ng-src="img/Italy.png"></i>
+    <i class="icon"><img class="icon-competition" ng-src="img/seriea.png"></i>
     Serie A
   </a>
 
   <a class="item item-icon-left" href="#/app/germany">
-    <i class="icon"><img class="icon-competition" ng-src="img/Germany.png"></i>
+    <i class="icon"><img class="icon-competition" ng-src="img/bundesliga.png"></i>
     Bundesliga
   </a>
     <a class="item item-icon-left" href="#/app/dutch">
-    <i class="icon"><img class="icon-competition" ng-src="img/Netherland.png"></i>
+    <i class="icon"><img class="icon-competition" ng-src="img/eredivisie.png"></i>
     Eredivisie
   </a>
     <a class="item item-icon-left" href="#/app/france">
-    <i class="icon"><img class="icon-competition" ng-src="img/France-icon.png"></i>
+    <i class="icon"><img class="icon-competition" ng-src="img/lique1.png"></i>
     Lique 1
   </a>
 </div>
