--- a/myApp/www/templates/contact.html
+++ b/myApp/www/templates/contact.html
@@ -1,8 +1,5 @@
-<ion-view>
-  <ion-nav-title> 
-      <img class="logosensatie" ng-src="img/logosensatie2.png">
-      
-    </ion-nav-title>
+<ion-view view-title="Contact">>
+
   <ion-content>
     <h4>Sensatie Reizen – Voetbalsensatie<br>
 Telefoon: +316 53 69 51 83<br>
