--- a/myApp/www/templates/menu.html
+++ b/myApp/www/templates/menu.html
@@ -14,7 +14,10 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Menu</h1>
+      
+      <img class="logosensatie" ng-src="img/logosensatie2.png">
+      
+  
     </ion-header-bar>
     <ion-content>
       <ion-list>
