--- a/myApp/www/templates/competities.html
+++ b/myApp/www/templates/competities.html
@@ -2,7 +2,7 @@
   <ion-content>
     <div class="list">
 
-<a class="item item-icon-left" href="#/app/england">
+<a class="item item-icon-left" href="#/app/englandoptions">
     <i class="icon"><img class="icon-competition" ng-src="img/premierleague.png"></i>
     Premier League
   </a>
