--- a/myApp/www/templates/competities.html
+++ b/myApp/www/templates/competities.html
@@ -7,7 +7,7 @@
     Premier League
   </a>
 
-  <a class="item item-icon-left item-icon-left" href="#/app/spain">
+  <a class="item item-icon-left item-icon-left" href="#/app/spainoptions">
     <i class="icon"><img class="icon-competition" ng-src="img/ligabvva.png"></i>
     Primera División
   </a>
