--- a/myApp/www/templates/home.html
+++ b/myApp/www/templates/home.html
@@ -1,5 +1,10 @@
 <ion-view view-title="Home">
   <ion-content>
-    <h1>Home page</h1>
+    <div class="container">
+    <img class="homeimg" ng-src="img/Voetbalreizen.jpg">
+    <h4>Wie zijn wij?</h4>
+    <p>Wij zijn voetbalsensatie, wij bieden 100% garantie op wedstrijdtickets voor buitenlandse topclubs. Onze klanten voorzien wij van goede plekken in het stadion naar keuze, ook zorgen we voor mooie hotels waar u kunt verblijven.</p>
+    
+    </div>
   </ion-content>
 </ion-view>
