--- a/myApp/www/templates/contact.html
+++ b/myApp/www/templates/contact.html
@@ -1,12 +1,13 @@
 <ion-view view-title="Contact">>
 
   <ion-content>
-    <h4>Sensatie Reizen – Voetbalsensatie<br>
+    <div class="container">
+    <hp>Sensatie Reizen – Voetbalsensatie<br>
 Telefoon: +316 53 69 51 83<br>
 Mail: info@sensatiereizen.nl<br>
 <br>
 KvK nr. Breda: 56149719<br>
 IBAN: NL35 RABO 0171 9173 75<br>
-BTW NL: 851993059B01</h4>
+BTW NL: 851993059B01</p></div>
   </ion-content>
 </ion-view>
