--- a/myApp/www/templates/leaguetables.html
+++ b/myApp/www/templates/leaguetables.html
@@ -1,5 +1,8 @@
-<ion-view view-title="Primera Division">
-  <ion-content ng-controller="ItalyCtrl">
+<ion-view>
+      <ion-nav-title>
+		  {{league}}
+    </ion-nav-title>
+  <ion-content>
     <ion-list>
            
       <ion-item ng-repeat="t in teams.standing"><img class="logoclub" ng-src="{{t.crestURI}}"> <div class="teamname"> {{t.teamName}}  </div>  <div class="points"> {{t.points}} </div></ion-item>
