--- a/myApp/www/templates/englandoptions.html
+++ b/myApp/www/templates/englandoptions.html
@@ -5,19 +5,19 @@
 <a class="item item-icon-left" href="#/app/england">
        <i class="icon"><img class="icon-competition" ng-src="img/premierleague.png"></i>
 
-   Uitslagen
+   Ranglijst
   </a>
 
-  <a class="item item-icon-left item-icon-left" href="#/app/spain">
+  <a class="item item-icon-left item-icon-left" href="#/app/teamfixtures">
     <i class="icon"><img class="icon-competition" ng-src="img/premierleague.png"></i>
     
 competitieprogramma
   </a>
   
- <a class="item item-icon-left item-icon-left" href="#/app/spain">
+ <a class="item item-icon-left item-icon-left" href="#/app/teaminfo">
     <i class="icon"><img class="icon-competition" ng-src="img/premierleague.png"></i>
     
-Spelers info
+Marktwaarde clubs
   </a>
 
 
