--- a/myApp/www/templates/teamfixtures.html
+++ b/myApp/www/templates/teamfixtures.html
@@ -5,7 +5,7 @@ Komende wedstrijden
   <ion-content>
     <ion-list>
            
-      <ion-item ng-repeat="team in isActive">  {{team.homeTeamName}} - {{team.awayTeamName}}  {{team.date}}</ion-item>
+      <ion-item ng-repeat="team in isActive"> <p> {{team.homeTeamName}} - {{team.awayTeamName}}  {{team.date}} </p></ion-item>
       
    </ion-list>
   </ion-content>
