--- a/myApp/www/templates/teaminfo.html
+++ b/myApp/www/templates/teaminfo.html
@@ -5,7 +5,7 @@ Marktwaarde
   <ion-content>
     <ion-list>
            
-      <ion-item ng-repeat="t in teams.teams"><img class="logoclub" ng-src="{{t.crestUrl}}"><div class="teamname"> {{t.name}} </div>  <div class="marketvalue">  {{t.squadMarketValue}} </div></ion-item>
+      <ion-item ng-repeat="t in teams.teams"><img class="logoclub" ng-src="{{t.crestUrl}}"><div class="teamname"> <p>{{t.name}} </p></div>  <div class="marketvalue"><p>  {{t.squadMarketValue}}</p> </div></ion-item>
       
    </ion-list>
   </ion-content>
