--- a/myApp/www/templates/leaguetables.html
+++ b/myApp/www/templates/leaguetables.html
@@ -5,7 +5,7 @@
   <ion-content>
     <ion-list>
            
-      <ion-item ng-repeat="t in teams.standing"><img class="logoclub" ng-src="{{t.crestURI}}"> <div class="teamname"> {{t.teamName}}  </div>  <div class="points"> {{t.points}} </div></ion-item>
+      <ion-item ng-repeat="t in teams.standing"><img class="logoclub" ng-src="{{t.crestURI}}"> <div class="teamname"> <p> {{t.teamName}}  </p></div>  <div class="points"> <p>{{t.points}} </p></div></ion-item>
       
    </ion-list>
   </ion-content>
