--- a/myApp/www/lib/ionic/css/ionic.css
+++ b/myApp/www/lib/ionic/css/ionic.css
@@ -4390,8 +4390,8 @@ a.subdued {
 
 .tabs-positive > .tabs,
 .tabs.tabs-positive {
-  border-color: #0c60ee;
-  background-color: #387ef5;
+  border-color: #003352;
+  background-color: #003352;
   background-image: linear-gradient(0deg, #0c60ee, #0c60ee 50%, transparent 50%);
   color: #fff; }
   .tabs-positive > .tabs .tab-item .badge,
