--- a/myApp/www/templates/competities.html
+++ b/myApp/www/templates/competities.html
@@ -1,8 +1,8 @@
 <ion-view view-title="Competities">
-  <ion-content>
+  <ion-content ng-controller="HomeCtrl">
     <div class="list">
 
-<a class="item item-icon-left" href="#/app/englandoptions">
+<a ng-show="showMap" ng-if="$root.showList" class="item item-icon-left" href="#/app/englandoptions">
     <i class="icon"><img class="icon-competition" ng-src="img/premierleague.png"></i>
     Premier League
   </a>
