--- a/myApp/www/templates/menu.html
+++ b/myApp/www/templates/menu.html
@@ -3,7 +3,6 @@
     <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
       </ion-nav-back-button>
-
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
@@ -11,24 +10,22 @@
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
-
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-      
       <img class="logosensatie" ng-src="img/logosensatie2.png">
-      
-  
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        
         <ion-item menu-close href="#/app/home">
-          Home
+          Home  {{ check.email }}
         </ion-item>
         <ion-item menu-close href="#/app/competities">
           Competities
         </ion-item>
         <ion-item menu-close href="#/app/contact">
+          Contact
+        </ion-item>
+        <ion-item menu-close href="#/app/tab/home">
           Contact
         </ion-item>
       </ion-list>
