--- a/myApp/www/lib/ionic/css/ionic.css
+++ b/myApp/www/lib/ionic/css/ionic.css
@@ -4392,7 +4392,7 @@ a.subdued {
 .tabs.tabs-positive {
   border-color: #003352;
   background-color: #003352;
-  background-image: linear-gradient(0deg, #0c60ee, #0c60ee 50%, transparent 50%);
+  background-image: linear-gradient(0deg, #003352, #003352 50%, transparent 50%);
   color: #fff; }
   .tabs-positive > .tabs .tab-item .badge,
   .tabs.tabs-positive .tab-item .badge {
@@ -4518,7 +4518,7 @@ a.subdued {
   top: 4%; }
 
 .tabs-striped.tabs-positive .tabs {
-  background-color: #387ef5; }
+  background-color: #003352; }
 
 .tabs-striped.tabs-positive .tab-item {
   color: rgba(255, 255, 255, 0.4);
@@ -5036,7 +5036,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
 /* If you change this, change platform.scss as well */
 .tabs-top > .tabs,
 .tabs.tabs-top {
-  top: 44px;
+  /*top: 0px;*/
   padding-top: 0;
   background-position: bottom;
   border-top-width: 0;
