--- a/myApp/www/css/style.css
+++ b/myApp/www/css/style.css
@@ -7,7 +7,7 @@ background-color: #003352;}
 }
 
 
-ion-item:nth-child(even) {background: #EAEAEA;}
+ion-item:nth-child(even) {background: #F8F8F8;}
 
 .logoclub {    height: 24px;
     margin-right: 16px; width: 23px; display:inline-block; float:left;}
@@ -21,3 +21,11 @@ ion-item:nth-child(even) {background: #EAEAEA;}
 .container {padding:9px;}
 .marketvalue {    float: right;
     margin-right: 0%;}
+
+.facebooklogin {width: 15px; margin-right:8px;}
+
+button#geenAccount {    float: left;
+    font-size: 13px;}
+
+button#wachtwoordvergeten {    font-size: 13px;
+    float: right;}
