--- a/myApp/www/lib/ionic/css/ionic.css
+++ b/myApp/www/lib/ionic/css/ionic.css
@@ -3517,6 +3517,9 @@ ion-infinite-scroll {
 .has-tabs-top {
   top: 93px; }
 
+.logintitle {text-align:center;}
+.containerlogin {padding:22px; background-color: #F8F8F8;     height: 231px;}
+
 .has-header.has-subheader.has-tabs-top {
   top: 137px; }
 
@@ -8619,7 +8622,7 @@ progress {
         color: #fff; }
   .button.button-positive {
     border-color: transparent;
-    background-color: #387ef5;
+    background-color: #003352;
     color: #fff; }
     .button.button-positive:hover {
       color: #fff;
@@ -8630,7 +8633,7 @@ progress {
       border-color: transparent;
       background: none;
       box-shadow: none;
-      color: #387ef5; }
+      color: #003352; }
     .button.button-positive.button-icon {
       border-color: transparent;
       background: none; }
