--- a/myApp/www/templates/menu.html
+++ b/myApp/www/templates/menu.html
@@ -7,6 +7,9 @@
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
       </ion-nav-buttons>
+      <ion-nav-buttons side="right">
+      <button ng-click="go('#/app/account')" ng-show="check.email" class="button button-clear button-light">Account</button>
+      </ion-nav-buttons>
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
