--- a/myApp/www/templates/login.html
+++ b/myApp/www/templates/login.html
@@ -16,7 +16,7 @@
       </label>
       
       <button class="button button-block button-positive"ng-click="login()">Inloggen</button>
-      	  <button id="geenAccount" class="button button-clear button-positive" ng-click="forgot()">Nog geen Account?</button>
+      	  <a id="geenAccount" class="button button-clear button-positive" href="#/app/signup">Nog geen Account?</a>
 
 	  <button id="wachtwoordvergeten" class="button button-clear button-assertive" ng-click="forgot()">Wachtwoord vergeten?</button>
 	  </div>
