--- a/myApp/www/templates/singup.html
+++ b/myApp/www/templates/singup.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Signup">
   	<ion-content>
-  	<h4 class="logintitle" >Maak hier uw account aan</h4>
-	    <div class="containerSignup">
+  	<h4 class="pagetitles" >Maak hier uw account aan</h4>
+	    <div class="containerpages">
 	   <h5>Email:</h5>
 	   <label class="item item-input">
         <input type="email" ng-model="newUser.email" placeholder="Email:">
