--- a/myApp/www/templates/login.html
+++ b/myApp/www/templates/login.html
@@ -3,10 +3,10 @@
      
 	  
 	  
-	  <h4 class="logintitle" >Log in met</h4>
+	  <h4 class="pagetitles" >Log in met</h4>
 	  <button class="button button-block"ng-click="facebook()"><img class="facebooklogin" ng-src="img/facebooklogin.png" alt="">Facebook</button>
 	  
-	   <h4 class="logintitle" >-------------  &nbsp;&nbsp;of&nbsp;&nbsp;  --------------</h4>
+	   <h4 class="pagetitles" >-------------  &nbsp;&nbsp;of&nbsp;&nbsp;  -------------</h4>
 	   <div class="containerlogin">
 	   <label class="item item-input">
         <input type="email" ng-model="user.email" placeholder="Email:">
