--- a/myApp/www/templates/account.html
+++ b/myApp/www/templates/account.html
@@ -5,7 +5,7 @@
 		</span>
 		
 		
-	<button class="button button-block">	Reset Password </button>
+	<button class="button button-block">	Reset Wachtwoord </button>
 	  		   <h4 class="pagetitles" >------------  &nbsp;&nbsp;uw gegevens&nbsp;&nbsp;  ------------</h4>
 		<div class="containerlogin">
 
