--- a/myApp/www/templates/menu.html
+++ b/myApp/www/templates/menu.html
@@ -9,7 +9,7 @@
       </ion-nav-buttons>
       <ion-nav-buttons side="right">
       <a ng-show="check.email" href="#/app/account" class="button button-clear button-light">Account</a>
-      <a ng-show="check.facebook" href="#/app/account" class="button button-clear button-light">{{ check.facebook }}</a><img class="facebook-icon" ng-src="{{ check.facebookprofileImageURL }}"> 
+      <a ng-show="check.facebook" href="#/app/account" class="button button-clear button-light"><img class="facebook-icon" ng-src="{{ check.facebookprofileImageURL }}"> </a>
       </ion-nav-buttons>
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
