--- a/myApp/www/templates/account.html
+++ b/myApp/www/templates/account.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Account">
   	<ion-content>
 		<span ng-show="check.email">
-	<h4 class="pagetitles" >	Welkom!  {{ check.email }}</h4> 
+	<h4 class="pagetitles" >  {{ check.email }}</h4> 
 		</span>
 		
 		
