--- a/myApp/www/css/style.css
+++ b/myApp/www/css/style.css
@@ -12,7 +12,7 @@ background-color: #003352;}
 }
 
 
-ion-item:nth-child(even) {background: #F8F8F8;}
+ion-item:nth-child(even) {background: #F0F0F0;}
 
 .logoclub {    height: 24px;
     margin-right: 16px; width: 23px; display:inline-block; float:left;}
@@ -34,3 +34,16 @@ a#geenAccount {    float: left;
 
 button#wachtwoordvergeten {    font-size: 13px;
     float: right;}
+
+.ion-person:before {color: white; margin-right:8px;}
+
+.list p {font-size: 18px;
+    color: #858585;}
+
+.ion-ios-telephone:before {color:#FFCC7B; margin-right: 8px;}
+
+.ion-ios-football:before { color: #FFCC7B; margin-right: 8px;}
+.ion-home:before {color:#FFCC7B; margin-right: 8px;}
+#username {margin-left: 13px;
+    margin-top: 6px;
+    font-size: 16px; color:white;}
