--- a/myApp/www/templates/menu.html
+++ b/myApp/www/templates/menu.html
@@ -15,23 +15,20 @@
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
-      <img class="logosensatie" ng-src="img/logosensatie2.png">
+  <ion-header-bar class="bar-stable">
+    <p  ng-show="check.email||check.facebook"  id="username" class="ion-person">{{ check.email }} {{ check.facebook }}</p>
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close href="#/app/home">
-          Home  {{ check.email }}
+        <ion-item  menu-close href="#/app/home">
+        <p class="icon menu-icon ion-home"> Home </p>   
         </ion-item>
         <ion-item menu-close href="#/app/competities">
-          Competities
+        <p class="ion-ios-football"> Competities</p> 
         </ion-item>
         <ion-item menu-close href="#/app/contact">
-          Contact
-        </ion-item>
-        <ion-item menu-close href="#/app/tab/home">
-          Contact
-        </ion-item>
+         <p class="ion-ios-telephone"> Contact</p> 
+        </ion-item> 
       </ion-list>
     </ion-content>
   </ion-side-menu>
