--- a/myApp/www/templates/menu.html
+++ b/myApp/www/templates/menu.html
@@ -1,4 +1,4 @@
-<ion-side-menus enable-menu-with-back-views="false">
+<ion-side-menus enable-menu-with-back-views="true">
   <ion-side-menu-content>
     <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
@@ -21,14 +21,14 @@
     <ion-content>
       <ion-list>
         <ion-item  menu-close href="#/app/home">
-        <p class="icon menu-icon ion-home"> Home </p>   
+        <p class="icon menu-icon ion-home"> Home </p>
         </ion-item>
         <ion-item menu-close href="#/app/competities">
-        <p class="ion-ios-football"> Competities</p> 
+        <p class="ion-ios-football"> Competities</p>
         </ion-item>
         <ion-item menu-close href="#/app/contact">
-         <p class="ion-ios-telephone"> Contact</p> 
-        </ion-item> 
+         <p class="ion-ios-telephone"> Contact</p>
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
