--- a/myApp/www/templates/englandoptions.html
+++ b/myApp/www/templates/englandoptions.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Opties">
   <ion-content>
     <div class="list">
-
+<div ng-show='loader'><img ng-src="img/loading.gif" class="loader"></div>
 <a class="item item-icon-left" href="#/app/england">
        <i class="icon"><img class="icon-competition" ng-src="img/premierleague.png"></i>
 
@@ -10,13 +10,13 @@
 
   <a class="item item-icon-left item-icon-left" href="#/app/teamfixtures">
     <i class="icon"><img class="icon-competition" ng-src="img/premierleague.png"></i>
-    
+
 competitieprogramma
   </a>
-  
+
  <a class="item item-icon-left item-icon-left" href="#/app/teaminfo">
     <i class="icon"><img class="icon-competition" ng-src="img/premierleague.png"></i>
-    
+
 Marktwaarde clubs
   </a>
 
