--- a/myApp/www/templates/voorkeur.html
+++ b/myApp/www/templates/voorkeur.html
@@ -1,4 +1,10 @@
+<style>
+.button back-button buttons  button-clear header-item{
+  display:none;
+}
+</style>
 <ion-view view-title="Voorkeur">
+  </ion-nav-buttons>
   	<ion-content ng-controller="HomeCtrl">
       <ion-toggle ng-model="$root.showList">Show List</ion-toggle>
 	</ion-content>
