--- a/myApp/www/templates/home.html
+++ b/myApp/www/templates/home.html
@@ -1,11 +1,7 @@
 <ion-view view-title="Home">
-  <ion-content>
-        <img class="homeimg" ng-src="img/Voetbalreizen.jpg">
+  <ion-content class="background" scroll="false">
+        <div class="homecontainer">
 
-    <div class="container">
-    <h4>Wie zijn wij?</h4>
-    <p>Wij zijn voetbalsensatie, wij bieden 100% garantie op wedstrijdtickets voor buitenlandse topclubs. Onze klanten voorzien wij van goede plekken in het stadion naar keuze, ook zorgen we voor mooie hotels waar u kunt verblijven.</p>
-
-    </div>
+   </div>
   </ion-content>
 </ion-view>
