--- a/myApp/www/templates/singup.html
+++ b/myApp/www/templates/singup.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Signup">
+<ion-view view-title="Signup" hide-back-button="true">
   	<ion-content>
   	<h4 class="pagetitles" >Maak hier uw account aan</h4>
 	    <div class="containerpages">
