--- a/myApp/www/templates/account.html
+++ b/myApp/www/templates/account.html
@@ -1,32 +1,32 @@
-<ion-view view-title="Account">
+<ion-view view-title="Account" hide-back-button="true">
   	<ion-content>
 		<span ng-show="check.email">
-	<h4 class="pagetitles" >  {{ check.email }}</h4> 
+	<h4 class="pagetitles" >  {{ check.email }}</h4>
 		</span>
-		
-		
+
+
 	<button class="button button-block">	Reset Wachtwoord </button>
 	  		   <h4 class="pagetitles" >------------  &nbsp;&nbsp;uw gegevens&nbsp;&nbsp;  ------------</h4>
 		<div class="containerlogin">
 
 	  	<h5>Oud Wachtwoord: </h5>
-	  	 
+
 	  	 <label class="item item-input">
         <input type="password" ng-model="reset.oldPassword" placeholder="Oud wachtwoord:">
       </label>
-	  	
+
 	  <h5>	Nieuw wachtwoord: </h5>
 	  	 <label class="item item-input">
         <input type="password" ng-model="reset.newPassword" placeholder="Nieuw wachtwoord:">
       </label>
 	  		  	<a href="#" id="geenAccount" class="button button-clear button-positive" ng-click="logout()">Uitloggen</a>
 
-	  	
+
 	  	<button id="wachtwoordvergeten" class="button button-clear button-assertive" ng-click="resetPassword()">Reset wachtwoord</button>
-	  	
+
 	  	<!--<h1>Upgrade account</h1>-->
-	  	
-	  	
+
+
 	  	</div>
 	</ion-content>
 </ion-view>
