--- a/myApp/www/templates/voorkeur.html
+++ b/myApp/www/templates/voorkeur.html
@@ -1,9 +1,4 @@
-<style>
-.button back-button buttons  button-clear header-item{
-  display:none;
-}
-</style>
-<ion-view view-title="Voorkeur">
+<ion-view view-title="Voorkeur" show-menu-button="true">
   </ion-nav-buttons>
   	<ion-content ng-controller="HomeCtrl">
       <ion-toggle ng-model="$root.showList">Show List</ion-toggle>
