--- a/myApp/www/templates/home.html
+++ b/myApp/www/templates/home.html
@@ -1,6 +1,44 @@
-<ion-view view-title="Home">
+<ion-view title='<img class="title-image" src="img/logosensatie2.png" />'>
 <ion-content class="background" scroll="false">
-  <div class="homecontainer">
+  <!-- <div class="homecontainer">
+  </div> -->
+  <div class="pitch">
+    <div class="field left">
+        <div class="penalty-area">
+        </div>
+    </div>
+    <div class="field right">
+        <div class="penalty-area">
+        </div>
+    </div>
+    <div class="center-circle"></div>
+  <div class="home-team">
+    <div class="player one"></div>
+    <div class="player two"></div>
+    <div class="player three"></div>
+    <div class="player four"></div>
+    <div class="player five"></div>
+    <div class="player six"></div>
+    <div class="player seven"></div>
+    <div class="player eight"></div>
+    <div class="player nine"></div>
+    <div class="player ten"></div>
+    <div class="player eleven"></div>
   </div>
+  <div class="visitor-team">
+    <div class="player one"></div>
+    <div class="player two"></div>
+    <div class="player three"></div>
+    <div class="player four"></div>
+    <div class="player five"></div>
+    <div class="player six"></div>
+    <div class="player seven"></div>
+    <div class="player eight"></div>
+    <div class="player nine"></div>
+    <div class="player ten"></div>
+    <div class="player eleven"></div>
+  </div>
+</div>
+
 </ion-content>
 </ion-view>
