--- a/myApp/www/templates/voorkeur.html
+++ b/myApp/www/templates/voorkeur.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Voorkeur" show-menu-button="true">
+<ion-view view-title="Voorkeur" hide-back-button="true">
   </ion-nav-buttons>
   	<ion-content ng-controller="HomeCtrl">
       <ion-toggle ng-model="$root.showList">Show List</ion-toggle>
