--- a/myApp/www/templates/home.html
+++ b/myApp/www/templates/home.html
@@ -1,8 +1,8 @@
 <ion-view title='<img class="title-image" src="img/logosensatie2.png" />'>
-<ion-content class="background" scroll="false">
+<ion-content scroll="false">
   <!-- <div class="homecontainer">
   </div> -->
-  <div class="pitch">
+  <div id="pitch">
     <div class="field left">
         <div class="penalty-area">
         </div>
@@ -13,30 +13,30 @@
     </div>
     <div class="center-circle"></div>
   <div class="home-team">
-    <div class="player one"></div>
-    <div class="player two"></div>
-    <div class="player three"></div>
-    <div class="player four"></div>
-    <div class="player five"></div>
-    <div class="player six"></div>
-    <div class="player seven"></div>
-    <div class="player eight"></div>
-    <div class="player nine"></div>
-    <div class="player ten"></div>
-    <div class="player eleven"></div>
+    <img class="player one"src="img/ac-milan.png"/>
+    <img class="player two"src="img/Arsenal-icon.png"/>
+    <img class="player three"src="img/AS-Roma-icon.png"/>
+    <img class="player four"src="img/Atletico-Madrid-icon.png"/>
+    <img class="player five"src="img/bayern-icon.png"/>
+    <img class="player six"src="img/Celtic-icon.png"/>
+    <img class="player seven"src="img/Chelsea-icon.png"/>
+    <img class="player eight"src="img/dortmunt-icon.png"/>
+    <img class="player nine"src="img/Everton-FC-icon.png"/>
+    <img class="player ten"src="img/FC-Barcelona-icon.png"/>
+    <img class="player eleven"src="img/Juventus-icon.png"/>
   </div>
   <div class="visitor-team">
-    <div class="player one"></div>
-    <div class="player two"></div>
-    <div class="player three"></div>
-    <div class="player four"></div>
-    <div class="player five"></div>
-    <div class="player six"></div>
-    <div class="player seven"></div>
-    <div class="player eight"></div>
-    <div class="player nine"></div>
-    <div class="player ten"></div>
-    <div class="player eleven"></div>
+    <img class="player one" src="img/Liverpool-FC-icon.png"/>
+    <img class="player two"src="img/Manchester-City-icon.png"/>
+    <img class="player three"src="img/Manchester-United-icon.png"/>
+    <img class="player four"src="img/Newcastle-United-icon.png"/>
+    <img class="player five"src="img/Paris-Saint-Germain-icon.png"/>
+    <img class="player six"src="img/Real-Madrid-icon.png"/>
+    <img class="player seven"src="img/Schalke-04-icon.png"/>
+    <img class="player eight"src="img/Sevilla-icon.png"/>
+    <img class="player nine"src="img/Southampton-FC-icon.png"/>
+    <img class="player ten"src="img/Tottenham-Hotspur-icon.png"/>
+    <img class="player eleven"src="img/Valencia-icon.png"/>
   </div>
 </div>
 
