--- a/myApp/www/css/style.css
+++ b/myApp/www/css/style.css
@@ -77,18 +77,18 @@ button#wachtwoordvergeten {    font-size: 13px;
     background-position: center;
     }*/
 
-		.pitch{
-		    background-color: #003352;
+		#pitch{
+				background: linear-gradient(-90deg, #003352, #D3D3D1, #003352);
 		    width: 590px;
 		    height: 380px;
-		    position: relative;
-		        -ms-transform: rotate(90deg); /* IE 9 */
+		    position: absolute;;
+		    -ms-transform: rotate(90deg); /* IE 9 */
 		    -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
 		    transform: rotate(90deg);
 				margin-top:100px;
 				margin-left:-109px;
 		}
-		.pitch:after{
+		#pitch:after{
 		  content: "";
 		  border-left: 1px solid white;
 		  position: absolute;
@@ -98,7 +98,7 @@ button#wachtwoordvergeten {    font-size: 13px;
 		  height:340px;
 		}
 
-		.pitch:before{
+		#pitch:before{
 		  content: "";
 		  border: 1px solid white;
 		  position: absolute;
@@ -181,9 +181,8 @@ button#wachtwoordvergeten {    font-size: 13px;
 
 		.player{
 		  position:absolute;
-		  border-radius:50%;
-		  width:10px;
-		  height:10px;
+		  width:50px;
+		  height:50px;
 		}
 		.player:after{
 		  font-size:10px;
@@ -191,78 +190,71 @@ button#wachtwoordvergeten {    font-size: 13px;
 		  left:3px;
 		}
 		.home-team .player{
-		  background:red;
+		  background:transparent;
+			-ms-transform: rotate(-90deg); /* IE 9 */
+	    -webkit-transform: rotate(-90deg); /* Chrome, Safari, Opera */
+	    transform: rotate(-90deg);
 		}
 		.home-team .player.one{
-		  top:190px;
+		  top:165px;
 		  left:20px;
-		  background:gray;
+		  background:transparent;
 		}
 		.home-team .player.one:after{
-		  content:"1";
 		}
 		.home-team .player.two{
 		  top:310px;
 		  left:80px;
 		}
 		.home-team .player.two:after{
-		  content:"2";
 		}
 		.home-team .player.three{
-		  top:60px;
+		  top:30px;
 		  left:80px;
 		}
 		.home-team .player.three:after{
-		  content:"3";
 		}
 		.home-team .player.four{
 		  top:145px;
 		  left:80px;
 		}
 		.home-team .player.four:after{
-		  content:"4";
 		}
 		.home-team .player.five{
 		  top:225px;
 		  left:80px;
 		}
 		.home-team .player.five:after{
-		  content:"5";
 		}
 		.home-team .player.six{
 		  top:310px;
 		  left:160px;
 		}
 		.home-team .player.six:after{
-		  content:"6";
 		}
 		.home-team .player.seven{
 		  top:60px;
 		  left:160px;
 		}
 		.home-team .player.seven:after{
-		  content:"7";
 		}
 		.home-team .player.eight{
 		  top:145px;
 		  left:160px;
 		}
 		.home-team .player.eight:after{
-		  content:"8";
 		}
 		.home-team .player.nine{
 		  top:225px;
 		  left:160px;
 		}
 		.home-team .player.nine:after{
-		  content:"9";
 		}
 		.home-team .player.ten{
 		  top:145px;
 		  left:240px;
 		}
 		.home-team .player.ten:after{
-		  content:"10";
 		  left:0px;
 		}
 		.home-team .player.eleven{
@@ -270,22 +262,23 @@ button#wachtwoordvergeten {    font-size: 13px;
 		  left:240px;
 		}
 		.home-team .player.eleven:after{
-		  content:"11";
 		  left:0px;
 		}
 		.visitor-team .player{
-		  background:blue;
+		  background:transparent;
+			-ms-transform: rotate(-90deg); /* IE 9 */
+	    -webkit-transform: rotate(-90deg); /* Chrome, Safari, Opera */
+	    transform: rotate(-90deg);
 		}
 		.visitor-team .player:after{
 		  color:white;
 		}
 		.visitor-team .player.one{
-		  top:190px;
+		  top:185px;
 		  right:20px;
-		  background:cyan;
+		  background:transparent;
 		}
 		.visitor-team .player.one:after{
-		  content:"1";
 		  color:red;
 		}
 		.visitor-team .player.two{
@@ -293,63 +286,54 @@ button#wachtwoordvergeten {    font-size: 13px;
 		  right:80px;
 		}
 		.visitor-team .player.two:after{
-		  content:"2";
 		}
 		.visitor-team .player.three{
 		  top:60px;
 		  right:80px;
 		}
 		.visitor-team .player.three:after{
-		  content:"3";
 		}
 		.visitor-team .player.four{
 		  top:145px;
 		  right:80px;
 		}
 		.visitor-team .player.four:after{
-		  content:"4";
 		}
 		.visitor-team .player.five{
 		  top:225px;
 		  right:80px;
 		}
 		.visitor-team .player.five:after{
-		  content:"5";
 		}
 		.visitor-team .player.six{
 		  top:310px;
 		  right:160px;
 		}
 		.visitor-team .player.six:after{
-		  content:"6";
 		}
 		.visitor-team .player.seven{
 		  top:60px;
 		  right:160px;
 		}
 		.visitor-team .player.seven:after{
-		  content:"7";
 		}
 		.visitor-team .player.eight{
 		  top:145px;
 		  right:160px;
 		}
 		.visitor-team .player.eight:after{
-		  content:"8";
 		}
 		.visitor-team .player.nine{
 		  top:225px;
 		  right:160px;
 		}
 		.visitor-team .player.nine:after{
-		  content:"9";
 		}
 		.visitor-team .player.ten{
 		  top:145px;
 		  right:240px;
 		}
 		.visitor-team .player.ten:after{
-		  content:"10";
 		  left:0px;
 		}
 		.visitor-team .player.eleven{
@@ -357,36 +341,5 @@ button#wachtwoordvergeten {    font-size: 13px;
 		  right:240px;
 		}
 		.visitor-team .player.eleven:after{
-		  content:"11";
 		  left:0px;
-		}
-		.player{
-		  animation-duration:5s;
-		  animation-timing-function:linear;
-		  animation-delay:2s;
-		  animation-iteration-count:infinite;
-		  animation-direction:alternate;
-		  animation-play-state:running;
-		}
-		.home-team .player.nine{
-		  animation-name:nine;
-		}
-		@keyframes nine
-		{
-		0%   {left:160px; top:225px;}
-		25%  {left:200px; top:265px;}
-		50%  {left:200px; top:225px;}
-		75%  {left:200px; top:185px;}
-		100% {left:160px; top:225px;}
-		}
-		.home-team .player.eight{
-		  animation-name:eight;
-		}
-		@keyframes eight
-		{
-		0%   {left:160px; top:145px;}
-		25%  {left:200px; top:185px;}
-		50%  {left:200px; top:145px;}
-		75%  {left:200px; top:105px;}
-		100% {left:160px; top:145px;}
 		}
