--- a/myApp/www/templates/home.html
+++ b/myApp/www/templates/home.html
@@ -41,4 +41,7 @@
 </div>
 
 </ion-content>
+<ion-footer-bar align-title="left" class="bar-assertive">
+  <h1 class="title">Title!</h1>
+</ion-footer-bar>
 </ion-view>
