--- a/myApp/www/templates/menu.html
+++ b/myApp/www/templates/menu.html
@@ -1,4 +1,4 @@
-<ion-side-menus enable-menu-with-back-views="false">
+<ion-side-menus hide-back-button="false" enable-menu-with-back-views="true">
   <ion-side-menu-content>
     <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
@@ -28,6 +28,18 @@
         </ion-item>
         <ion-item menu-close href="#/app/contact">
          <p class="ion-ios-telephone"> Contact</p>
+        </ion-item>
+        <ion-item menu-close href="#/app/login" hide-back-button="true" ng-hide="check.email||check.facebook" class="tabs-icon-top tabs-positive" enable-menu-with-back-views="true">
+         <p class="ion-ios-person"> Login</p>
+        </ion-item>
+        <ion-item menu-close href="#/app/signup" hide-back-button="true" ng-hide="check.email||check.facebook" class="tabs-icon-top tabs-positive" enable-menu-with-back-views="true">
+         <p class="ion-person-add"> Signup</p>
+        </ion-item>
+        <ion-item menu-close href="#/app/account" hide-back-button="true" ng-show="check.email||check.facebook" class="tabs-icon-top tabs-positive">
+         <p class="ion-ios-gear"> Account</p>
+        </ion-item>
+        <ion-item menu-close href="#/app/voorkeur" hide-back-button="true"ng-show="check.email||check.facebook" class="tabs-icon-top tabs-positive">
+         <p class="ion-ios-gear"> voorkeur</p>
         </ion-item>
       </ion-list>
     </ion-content>
